@@ -1,4 +1,7 @@
-Sat Jul 18 11:15:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sat Jul 18 12:05:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ruby.h (RFLOAT_VALUE, RSTRING_END, RREGEXP_SRC_*, RBIGNUM_*):
+	  backported macros for compatiblity from trunk.
 
 	* re.h (RMATCH_REGS): added for compatibility.
 
